--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Albert+Sans&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Albert Sans', sans-serif;
 }
 
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
 }
 
 * {
